--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,13 @@
 <header class="header" role="banner">
-	Header
+	<div class="wrapper">
+		<div>
+			<a href="/"><img class="header-logo-img" src="/assets/images/logo.png" alt="Playorama" width="120" height="28" /></a>
+		</div>
+		<nav class="header-nav" role="navigation" aria-label="Main menu">
+			<a class="header-nav-link" href="/videos/sample/">Play</a>
+			<a class="header-nav-link" href="/encoder/">Encode</a>
+			<a class="header-nav-link" href="/stream/">Stream</a>
+			<a class="header-nav-btn" href="https://hteumeuleu.itch.io/playorama/">Download on itch.io</a>
+		</nav>
+	</div>
 </header>
