--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,9 @@
 	<div class="page{{ page.name | remove: '.html' | slugify | default: 'default' | prepend: ' page--' }}">
 		{% include header.html %}
 		<main class="main" role="main">
-			{{ content }}
+			<div class="wrapper">
+				{{ content }}
+			</div>
 		</main>
 		{% include footer.html %}
 	</div>
