--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -9,17 +9,21 @@
 }
 
 body {
-	padding: rem(20px);
+	padding: rem(16px);
 	min-width: rem(280px);
 	min-height: 100vh;
 	font: 1em/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
-	color: $color-white;
-	background: $color-black;
+	color: $color-black;
+	background: white;
 	scroll-behavior: smooth;
 }
 
-a:active,
-a:focus {
-	outline: 1px dotted rgba(255, 255, 255, 0.5);
+a:is(:active, :focus) {
+	outline: 1px dotted;
 	outline-offset: rem(4px);
+}
+
+img {
+	vertical-align: middle;
+	image-rendering: pixelated;
 }
