feat: update styles

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <footer class="footer" role="contentinfo">
 	<div class="wrapper">
-		Footer
+		<p>
+			Made in France by <a href="https://mastodon.social/@HTeuMeuLeu">@HTeuMeuLeu</a>
+		</p>
 	</div>
 </footer>
