--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,5 @@
-@import "_reset";
-@import "_common";
-@import "_header";
+@import "_utilities/_reset";
+@import "_utilities/_common";
+@import "_components/_header";
+@import "_components/_footer";
+@import "_pages/_encoder";
