--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,6 @@
 ---
 ---
-@import "_functions";
-@import "_variables";
+@import "_utilities/_functions";
+@import "_utilities/_variables";
 
 @import "main";
