--- a/_sass/_utilities/_reset.scss
+++ b/_sass/_utilities/_reset.scss
@@ -9,7 +9,8 @@
 }
 
 body {
-	padding: rem(16px);
+	display: flex;
+	flex-direction: column;
 	min-width: rem(280px);
 	min-height: 100vh;
 	font: 1em/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
@@ -26,4 +27,8 @@ a:is(:active, :focus) {
 img {
 	vertical-align: middle;
 	image-rendering: pixelated;
+}
+
+a {
+	color: inherit;
 }
