--- a/_sass/_pdv/pdv.scss
+++ b/_sass/_pdv/pdv.scss
@@ -1,7 +1,5 @@
-@import "_functions";
-@import "_colors";
-@import "_reset";
+@import "_utilities/_functions";
+@import "_utilities/_variables";
 @import "_buttons";
 @import "_layout";
 @import "_form";
-@import "_footer";
