--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,8 @@
+@import "_utilities/_functions";
+@import "_utilities/_variables";
 @import "_utilities/_reset";
 @import "_utilities/_common";
+@import "_utilities/_a11y";
 @import "_components/_header";
 @import "_components/_footer";
 @import "_pages/_encoder";
