--- a/_sass/_pdv/_layout.scss
+++ b/_sass/_pdv/_layout.scss
@@ -1,16 +1,3 @@
-.wrapper {
-	flex-grow: 0;
-	margin: auto;
-	padding: rem(16px);
-}
-
-.main {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	min-height: calc(100vh - 9rem);
-}
-
 @media only screen and (min-width:rem(1024px)) {
 	.app {
 		display: flex;
@@ -37,8 +24,8 @@
 	margin: 0 0 rem(16px);
 	max-width: rem(400px);
 	width: calc(100% - #{rem(48px)});
-	background-color: $grey;
-	border: rem(24px) solid $black;
+	background-color: $color-black;
+	border: rem(24px) solid #000;
 	border-radius: rem(16px);
 	box-sizing: content-box;
 }
@@ -48,7 +35,7 @@
 	width: 100%;
 	height: auto;
 	aspect-ratio: 400 / 240;
-	background-color: $black;
+	background-color: #000;
 }
 
 #source {
