--- a/_sass/_utilities/_reset.scss
+++ b/_sass/_utilities/_reset.scss
@@ -15,7 +15,7 @@ body {
 	min-height: 100vh;
 	font: 1em/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
 	color: $color-black;
-	background: white;
+	background: $color-yellow;
 	scroll-behavior: smooth;
 }
 
