--- a/_sass/_pages/_encoder.scss
+++ b/_sass/_pages/_encoder.scss
@@ -4,4 +4,13 @@
 	.header {
 		border-bottom-color: transparent;
 	}
+
+	.main {
+		display: flex;
+		flex-direction: column;
+
+		& > .wrapper {
+			margin: auto;
+		}
+	}
 }
