--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,4 +5,5 @@
 @import "_utilities/_a11y";
 @import "_components/_header";
 @import "_components/_footer";
+@import "_pages/_home";
 @import "_pages/_encoder";
