--- a/_sass/_components/_header.scss
+++ b/_sass/_components/_header.scss
@@ -7,9 +7,10 @@
 		align-items: center;
 		justify-content: space-between;
 		gap: rem(32px);
-	}
 
-	img {
+		@media only screen and (max-width: rem(768px)) {
+			flex-direction: column;
+		}
 	}
 }
 
@@ -22,6 +23,12 @@
 
 .header-nav {
 	display: flex;
+	gap: rem(4px);
+
+	@media only screen and (max-width: rem(768px)) {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
 
 	a {
 		padding: rem(8px) rem(16px);
@@ -34,16 +41,31 @@
 }
 
 .header-nav-link {
+	position: relative;
 	color: black;
 
-	&:is(:hover, :focus) {
+	&:is(:hover, :focus, [aria-current]) {
 		background-color: rgba(255,255,255,0.25);
+	}
+
+	sup {
+		position: absolute;
+		top: rem(-2px);
+		right: rem(8px);
+		display: inline-block;
+		text-transform: uppercase;
+		font-size: 0.5em;
+		padding: 0.25em 0.5em;
+		border-radius: 1em;
+		color: $color-yellow;
+		background-color: black;
 	}
 }
 
 .header-nav-btn {
 	color: $color-yellow;
 	background-color: black;
+	white-space: nowrap;
 
 	&:is(:hover, :focus) {
 		opacity: 0.7;
