--- a/_sass/_components/_btn.scss
+++ b/_sass/_components/_btn.scss
@@ -1,5 +1,4 @@
-.btn,
-input::file-selector-button {
+.btn {
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
@@ -21,29 +20,20 @@ input::file-selector-button {
 
 	&:not([disabled]):active {
 		transform: translateY(#{rem(2px)});
-		transform: scale(0.98);
+		transform: scale(0.94444);
+	}
+
+	&[disabled] {
+		cursor: not-allowed;
+		color: #212223;
+		background-color: #b1afa7;
 	}
 }
 
-.btn[disabled] {
-	cursor: not-allowed;
-	color: #212223;
-	background-color: #b1afa7;
-}
-
 input::file-selector-button {
-	font-size: rem(16px);
-	background-color: $color-black;
+	@extend .btn;
 }
 
-.button-big {
-	min-width: rem(196px);
-	min-height: rem(48px);
-	font-size: rem(20px);
-	border-radius: rem(24px);
+.btn--accent {
 	background-color: $color-purple;
-}
-
-.button-black {
-	background-color: $color-black;
 }
