--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,4 +5,6 @@
 @import "_utilities/_a11y";
 @import "_components/_header";
 @import "_components/_footer";
+@import "_components/_app";
+@import "_components/_btn";
 @import "_pages/_home";
