--- a/_sass/_utilities/_reset.scss
+++ b/_sass/_utilities/_reset.scss
@@ -5,7 +5,7 @@
 }
 
 :root {
-	color-scheme: light dark;
+	color-scheme: light;
 }
 
 body {
@@ -17,6 +17,7 @@ body {
 	color: $color-black;
 	background: $color-yellow;
 	scroll-behavior: smooth;
+	accent-color: $color-purple;
 }
 
 a:is(:active, :focus) {
