--- a/_sass/_components/_header.scss
+++ b/_sass/_components/_header.scss
@@ -1,12 +1,13 @@
 .header {
-	margin: rem(-16px) rem(-16px) rem(16px);
+	margin: rem(-8px) rem(-16px) rem(16px);
 	padding: rem(8px) rem(16px);
 
 	.wrapper {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		gap: rem(32px);
+		column-gap: rem(32px);
+		row-gap: rem(16px);
 
 		@media only screen and (max-width: rem(768px)) {
 			flex-direction: column;
