--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,4 +7,5 @@
 @import "_components/_footer";
 @import "_components/_app";
 @import "_components/_btn";
+@import "_components/_bubble";
 @import "_pages/_home";
