--- a/_sass/_pages/_home.scss
+++ b/_sass/_pages/_home.scss
@@ -1,4 +1,9 @@
 .page--home {
+	.main > .wrapper {
+		display: grid;
+		grid-template-rows: 1fr;
+		max-width: rem(960px);
+	}
 	.hero {
 		display: flex;
 		flex-direction: column;
@@ -14,9 +19,7 @@
 		}
 
 		@media only screen and (min-width: rem(800px)) {
-			min-height: rem(400px);
 			font-size: rem(40px);
-			margin-inline: calc((100vw - #{rem(800px)}) / 4 * -1);
 		}
 	}
 	.features-list {
