--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,11 @@
 			Made in France by <a href="https://mastodon.social/@HTeuMeuLeu">@HTeuMeuLeu</a>
 		</p>
 		<div class="bubble">
+			{%- if page.thanks == true -%}
 			<p>
 				Huge thanks to <a href="https://twitter.com/rakujira">rakujira</a> for his personal help and his <a href="https://github.com/jaames/playdate-reverse-engineering">Playdate reverse engineering</a>. And thanks to <a href="https://twitter.com/davehayden">Dave Hayden</a> for his <a href="https://devforum.play.date/t/video-encoder-work-in-progress-mac-only/1390/6">1bitvideo</a> app.
 			</p>
+			{%- endif -%}
 			<p>
 				<b>Play videos on Playdate with <a href="https://hteumeuleu.itch.io/playorama/">Playorama</a>!</b>
 			</p>
